@@ -1,5 +1,7 @@
 *SVN*
 
+* Fix issue where Table#references doesn't pass a :null option to a *_type attribute for polymorphic associations.  Closes #10753 [railsjitsu]
+
 * Fixtures: removed support for the ancient pre-YAML file format.  #10736 [John Barnette]
 
 * More thoroughly quote table names.  #10698 [dimdenis, lotswholetime, Jeremy Kemper]
